BSERVDEV-9199 - Better error handling and logging
Removed accidentally commited iml file.
Updated error handling to include command and response wherever possible.
Removed == in favour of =.

Implemented new error handling scheme

BSERVDEV-13217: Minor review work, variable/comment rework

Minor tweaks after latest review comments

Removed \#\(\) around run commands. Redirected selected aws commands to dev null. Lower cased local variable names

Quoted a command that was forgotten

Introduced ! notation to replace || true for white listed commands

Removed excessive logging. Quoted parameters that were missing quotes. Prefixed external commands with run to ensure they get logged.

Revert "BSERVDEV-13217: Moved AWS curl commands into diy-backup.sh"

This reverts commit c678aea26683fa6ce95b8d54a4fb2886be6c0183.

Revert "BSERVDEV-13217: Query for backup in archive functions"

This reverts commit a4502b2e4a5d4f723cdcb5afaadba1a6d2a8b0a3.

--- a/bitbucket.diy-backup.vars.sh.example
+++ b/bitbucket.diy-backup.vars.sh.example
@@ -41,6 +41,7 @@ BITBUCKET_BACKUP_PASS=
 
 # HipChat options
 HIPCHAT_URL=https://api.hipchat.com
+# Note: The Hipchat room name must be URL encoded. i.e. My Hipchat Room should be My%20Hipchat%20Room
 HIPCHAT_ROOM=
 HIPCHAT_TOKEN=
 
