--- a/bitbucket.diy-backup.vars.sh.example
+++ b/bitbucket.diy-backup.vars.sh.example
@@ -159,9 +159,9 @@ case ${BACKUP_DATABASE_TYPE} in
         # Note: Attempt auto-detection based on major version (Works with CentOS, RHEL and Amazon Linux, override if unsure)
         STANDBY_DATABASE_DATA_DIR="/var/lib/pgsql${psql_major}/data"
         # The user which runs the PostgreSQL system service. This is normally "postgres"
-        STANDBY_DATABASE_SERVICE_USER="postgres"
+        STANDBY_DATABASE_SERVICE_USER=postgres
         # The name of the replication slot
-        STANDBY_DATABASE_REPLICATION_SLOT_NAME="bitbucket"
+        STANDBY_DATABASE_REPLICATION_SLOT_NAME=bitbucket
         # The username and password of the user that will be used to execute the replication.
         STANDBY_DATABASE_REPLICATION_USER_USERNAME=
         STANDBY_DATABASE_REPLICATION_USER_PASSWORD=
@@ -239,19 +239,19 @@ KEEP_BACKUPS=0
 # ==== Elasticsearch VARS ====
 
 # The Bitbucket search index (default is bitbucket-search-v1). Most users will NOT need to change this.
-ELASTICSEARCH_INDEX_NAME="bitbucket-search-v1"
+ELASTICSEARCH_INDEX_NAME=bitbucket-search-v1
 # The hostname and port for the Elasticsearch server / Elasticsearch load balancer
-ELASTICSEARCH_HOST=
-ELASTICSEARCH_PORT=
+ELASTICSEARCH_HOST=localhost
+ELASTICSEARCH_PORT=7993
 # Elasticsearch credentials in the format: -u "username:password"
 ELASTICSEARCH_CREDENTIALS=
-ELASTICSEARCH_REPOSITORY_NAME=
+ELASTICSEARCH_REPOSITORY_NAME=bitbucket-snapshots
 
 case ${BACKUP_ELASTICSEARCH_TYPE} in
     s3)
         # Configuration for the Amazon S3 snapshot repository (s3)
-        ELASTICSEARCH_S3_BUCKET=
-        ELASTICSEARCH_S3_BUCKET_REGION=
+        ELASTICSEARCH_S3_BUCKET=bitbucket-search-snapshots
+        ELASTICSEARCH_S3_BUCKET_REGION=us-east-1
         ;;
     fs)
         # Configuration for the shared filesystem snapshot repository (fs)
