--- a/bitbucket.diy-backup.vars.sh.example
+++ b/bitbucket.diy-backup.vars.sh.example
@@ -122,9 +122,9 @@ case ${BACKUP_DATABASE_TYPE} in
         RESTORE_RDS_INSTANCE_CLASS=
         # Whether or not to restore the database as a Multi-AZ deployment
         RESTORE_RDS_MULTI_AZ=true
-        # The subnet in which the database will be restored
+        # The subnet in which the database will be restored, if not set AWS will attempt to use the account default.
         RESTORE_RDS_SUBNET_GROUP_NAME=
-        # The security group to assign to the restored instance
+        # The security group to assign to the restored instance, if not set AWS will attempt to use the account default.
         RESTORE_RDS_SECURITY_GROUP=
 
         # ==== DISASTER RECOVERY VARS ====
@@ -180,9 +180,9 @@ esac
 
 case ${BACKUP_ARCHIVE_TYPE} in
     aws-snapshots)
-        # The AWS Account ID, used when copying EBS + RDS snapshots across region.
+        # The ID of the AWS account that will receive copies of the EBS and/or RDS snapshots.
         BACKUP_DEST_AWS_ACCOUNT_ID=
-        # The AWS Role ARN to assume when tagging the EBS + RDS snapshots.
+        # The AWS Role ARN to assume when tagging the EBS and/or RDS snapshots.
         BACKUP_DEST_AWS_ROLE=
 
         # This variable is only required if you wish to copy the EBS and RDS snapshots to another region.
@@ -211,6 +211,9 @@ if [ "amazon-ebs" = "${BACKUP_HOME_TYPE}" -o "amazon-rds" = "${BACKUP_DATABASE_T
 
     AWS_INFO=$(curl ${CURL_OPTIONS} http://169.254.169.254/latest/dynamic/instance-identity/document)
 
+    # The AWS account ID of the instance. Used to create Amazon Resource Names (ARNs)
+    AWS_ACCOUNT_ID=$(echo "${AWS_INFO}" | jq -r .accountId)
+
      # The availability zone in which volumes will be created when restoring an instance.
     AWS_AVAILABILITY_ZONE=$(echo "${AWS_INFO}" | jq -r .availabilityZone)
 
@@ -221,7 +224,7 @@ if [ "amazon-ebs" = "${BACKUP_HOME_TYPE}" -o "amazon-rds" = "${BACKUP_DATABASE_T
     AWS_EC2_INSTANCE_ID=$(echo "${AWS_INFO}" | jq -r .instanceId)
 
     # Additional AWS tags for EBS and RDS snapshot, tags needs to be in JSON format without enclosing square brackets:
-    # Example: AWS_ADDITIONAL_TAGS='{"Key":"Value"}, {"Key":"Value"}'
+    # Example: AWS_ADDITIONAL_TAGS='{"Key":"key", "Value":"value"}'
     AWS_ADDITIONAL_TAGS=
 fi
 
