--- a/bitbucket.diy-backup.vars.sh.example
+++ b/bitbucket.diy-backup.vars.sh.example
@@ -6,7 +6,7 @@ INSTANCE_NAME=bitbucket
 BITBUCKET_URL=http://localhost:7990
 
 # The path to the Bitbucket home directory (with trailing /)
-BITBUCKET_HOME=/media/atl/bitbucket
+BITBUCKET_HOME=/media/atl/bitbucket/
 
 # Owner and group of ${BITBUCKET_HOME}:
 BITBUCKET_UID=atlbitbucket
@@ -51,7 +51,7 @@ BACKUP_ARCHIVE_TYPE=tar
 #  - s3                 - Amazon S3 bucket - requires the Elasticsearch Cloud plugin to be installed. See
 #                         https://www.elastic.co/guide/en/elasticsearch/plugins/2.3/cloud-aws.html
 #
-#  - aws                - Amazon ElasticSearch Service - uses s3 to store snapshots
+#  - aws                - Amazon Elasticsearch Service - uses s3 to store snapshots
 BACKUP_ELASTICSEARCH_TYPE=
 
 # If BACKUP_ZERO_DOWNTIME is set to true, the home directory and database will be backed up WITHOUT locking Bitbucket
@@ -242,7 +242,7 @@ KEEP_BACKUPS=0
 
 # The Bitbucket search index (default is bitbucket-search-v1). Most users will NOT need to change this.
 ELASTICSEARCH_INDEX_NAME=bitbucket-search-v1
-# The hostname and port for the Elasticsearch server / Elasticsearch load balancer
+# The hostname and port for the Elasticsearch server / Elasticsearch load balancer/ Elasticsearch Domain
 ELASTICSEARCH_HOST=localhost:7992
 ELASTICSEARCH_REPOSITORY_NAME=bitbucket-snapshots
 
